--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,63 @@
-# Compiled class file
-*.class
+# maven ignore
+target/
+node_modules/
+*.versionsBackup
 
-# Log file
+# eclipse ignore
+.settings/
+.project
+.classpath
+
+# idea ignore
+.idea/
+*.ipr
+*.iml
+*.iws
+
+# temp ignore
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+*.cache
+*.diff
+*.patch
+*.tmp
 
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# system ignore
+.DS_Store
+Thumbs.db
+# MacOS file
+.DS_Store
+# Project directories and files
+node_modules/
+dist/
+## npm-shrinkwrap.json
+## package-lock.json
+## yarn.lock
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+test/unit/coverage/
+test/e2e/reports/
+selenium-debug.log
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Others
+.project
+*.zip
+
+
+.vscode
